--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,59 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(255, 233, 93);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: 'Gilbert Color',
     monospace;
+}
+
+.code {
+  margin: 0 0.7rem;
+  padding: 0.2rem 1rem;
+  background: black;
+  border-radius: 0.3rem;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.logo {
+  width: 20rem;
+  height: 20rem;
+  position: relative;
+  left: 45%;
+  z-index: -1;
+}
+
+.hook {
+  display: flex;
+  justify-content: center;
+  font-family: 'Gilbert';
+  width: 100%;
+}
+
+.linkdrop {
+  display: flex;
+  justify-content: center;
+}
+
+.url {
+  border-radius: 0.3rem;
+  border-width: 0rem;
+  margin: 0 0.2rem;
+  padding: 0rem 0.5rem;
+}
+
+.copy {
+  margin: 0 0.2rem;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  border-width: 0.4rem;
+  border-radius: 0.3rem;
 }
