--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(255, 233, 93);
+  background: rgb(255, 255, 255);
 }
 
 code {
@@ -14,10 +14,21 @@ code {
 }
 
 .code {
-  margin: 0 0.7rem;
-  padding: 0.2rem 1rem;
-  background: black;
-  border-radius: 0.3rem;
+  margin: 0 0.3rem;
+  padding: 0.3rem 0.5rem 0.1rem 0.5rem;
+  background: rgb(1, 21, 49);
+  border-radius: 0.9rem;
+}
+
+.container-background {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 2000 1500'%3E%3Cdefs%3E%3Crect  stroke='%23ffffff' stroke-width='0.1' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='3' height='3' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cuse  fill='%23fcfcfc' href='%23s' y='2'/%3E%3Cuse  fill='%23fcfcfc' href='%23s' x='1' y='2'/%3E%3Cuse  fill='%23fafafa' href='%23s' x='2' y='2'/%3E%3Cuse  fill='%23fafafa' href='%23s'/%3E%3Cuse  fill='%23f7f7f7' href='%23s' x='2'/%3E%3Cuse  fill='%23f7f7f7' href='%23s' x='1' y='1'/%3E%3C/pattern%3E%3Cpattern id='b' width='7' height='11' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23f5f5f5'%3E%3Cuse href='%23s'/%3E%3Cuse href='%23s' y='5' /%3E%3Cuse href='%23s' x='1' y='10'/%3E%3Cuse href='%23s' x='2' y='1'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='8'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='5' y='2'/%3E%3Cuse href='%23s' x='5' y='6'/%3E%3Cuse href='%23s' x='6' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='h' width='5' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23f5f5f5'%3E%3Cuse href='%23s' y='5'/%3E%3Cuse href='%23s' y='8'/%3E%3Cuse href='%23s' x='1' y='1'/%3E%3Cuse href='%23s' x='1' y='9'/%3E%3Cuse href='%23s' x='1' y='12'/%3E%3Cuse href='%23s' x='2'/%3E%3Cuse href='%23s' x='2' y='4'/%3E%3Cuse href='%23s' x='3' y='2'/%3E%3Cuse href='%23s' x='3' y='6'/%3E%3Cuse href='%23s' x='3' y='11'/%3E%3Cuse href='%23s' x='4' y='3'/%3E%3Cuse href='%23s' x='4' y='7'/%3E%3Cuse href='%23s' x='4' y='10'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='17' height='13' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23f2f2f2'%3E%3Cuse href='%23s' y='11'/%3E%3Cuse href='%23s' x='2' y='9'/%3E%3Cuse href='%23s' x='5' y='12'/%3E%3Cuse href='%23s' x='9' y='4'/%3E%3Cuse href='%23s' x='12' y='1'/%3E%3Cuse href='%23s' x='16' y='6'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='19' height='17' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23ffffff'%3E%3Cuse href='%23s' y='9'/%3E%3Cuse href='%23s' x='16' y='5'/%3E%3Cuse href='%23s' x='14' y='2'/%3E%3Cuse href='%23s' x='11' y='11'/%3E%3Cuse href='%23s' x='6' y='14'/%3E%3C/g%3E%3Cg  fill='%23efefef'%3E%3Cuse href='%23s' x='3' y='13'/%3E%3Cuse href='%23s' x='9' y='7'/%3E%3Cuse href='%23s' x='13' y='10'/%3E%3Cuse href='%23s' x='15' y='4'/%3E%3Cuse href='%23s' x='18' y='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='53' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23F60'%3E%3Cuse href='%23s' x='2' y='5'/%3E%3Cuse href='%23s' x='16' y='38'/%3E%3Cuse href='%23s' x='46' y='42'/%3E%3Cuse href='%23s' x='29' y='20'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='59' height='71' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23F60'%3E%3Cuse href='%23s' x='33' y='13'/%3E%3Cuse href='%23s' x='27' y='54'/%3E%3Cuse href='%23s' x='55' y='55'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='g' width='139' height='97' patternUnits='userSpaceOnUse' patternTransform='scale(45.85) translate(-978.19 -733.64)'%3E%3Cg  fill='%23F60'%3E%3Cuse href='%23s' x='11' y='8'/%3E%3Cuse href='%23s' x='51' y='13'/%3E%3Cuse href='%23s' x='17' y='73'/%3E%3Cuse href='%23s' x='99' y='57'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23b)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23h)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23c)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23d)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23e)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23f)' width='100%25' height='100%25'/%3E%3Crect fill='url(%23g)' width='100%25' height='100%25'/%3E%3C/svg%3E");
+  background-size: cover;
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 .container {
@@ -26,14 +37,11 @@ code {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background: transparent;
 }
 
-.logo {
-  width: 20rem;
-  height: 20rem;
-  position: relative;
-  left: 45%;
-  z-index: -1;
+.icon {
+  color: rgb(254, 205, 46);
 }
 
 .hook {
@@ -44,20 +52,47 @@ code {
 }
 
 .linkdrop {
+  background: transparent;
   display: flex;
   justify-content: center;
 }
 
 .url {
-  border-radius: 0.3rem;
-  border-width: 0rem;
-  margin: 0 0.2rem;
-  padding: 0rem 0.5rem;
+  border-radius: 0.3rem 0rem 0rem 0.3rem;
+  border-width: 0.1rem 0rem 0.1rem 0.1rem;
+  border-color: lightpink;
+  border-style: solid;
+  margin: 0;
+  padding-left: 1rem;
+  width: 45rem;
+  height: 2.5rem;
+  font-family: 'Noto Mono for Powerline' monospace;
+}
+
+.url[readonly] {
+  border-style: dotted;
+  cursor: not-allowed;
+}
+
+.url:focus {
+  outline: 3px solid transparent;
 }
 
 .copy {
-  margin: 0 0.2rem;
+  margin: 0rem;
+  height: 2.8rem;
+  border-width: 0.2rem 0.2rem 0.2rem 0rem;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
-  border-width: 0.4rem;
-  border-radius: 0.3rem;
+  border-radius: 0rem 0.3rem 0.3rem 0rem;
+}
+
+.link {
+  color: gray;
+  margin: 0 1rem 0 1rem;
+}
+
+.hint {
+  font-family: 'Lato light';
+  padding-left: 1rem;
+  font-size: 0.7rem;
 }
