--- a/src/index.css
+++ b/src/index.css
@@ -166,16 +166,26 @@ code {
 
 .copy {
   border-width: 0rem;
-  text-align: right;
+  text-align: center;
   font-size: 1rem;
-  width: 14%;
+  width: 20%;
   align-self: end;
-  margin: 0rem 0.8rem 1rem 0;
+  font-size: 0.7rem;
+  margin: 0.4rem 0.8rem 1rem 0;
   background: white;
+}
+
+.copy:before {
+  content: "\f0c5";
+  font-family: FontAwesome;
 }
 
 .copy:hover {
   color: blue;
+}
+
+.copy:active {
+  background: rgba(220, 220, 220, 0.4);
 }
 
 .error {
