--- a/src/index.css
+++ b/src/index.css
@@ -57,8 +57,13 @@ code {
   justify-content: center;
 }
 
+.inputs {
+  display: flex;
+  flex-direction: column;
+}
+
 .url {
-  border-radius: 0.3rem 0rem 0rem 0.3rem;
+  border-radius: 0.3rem 0rem 0rem 0rem;
   border-width: 0.1rem 0rem 0.1rem 0.1rem;
   border-color: lightpink;
   border-style: solid;
@@ -76,6 +81,13 @@ code {
 
 .url:focus {
   outline: 3px solid transparent;
+}
+
+.tag {
+  width: 10rem;
+  border-width: 0rem 0.1rem 0.1rem 0.1rem;
+  border-radius: 0rem 0rem 0.3rem 0.3rem;
+  font-family: FontAwesome;
 }
 
 .cut {
@@ -101,7 +113,8 @@ code {
 
 .hint-box {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
+  margin: 0.2rem 29rem;
   font-family: 'Lato Black';
   font-size: 0.8rem;
   color: rgba(180, 180, 180, 1);
